# speelgrond

./: README.md  pyproject.toml
speelgrond/: __init__.py  game_window.py  host_this_folder.py  keyboard.py  make_game_window.py
speelgrond/examples/1_sphere/: __main__.py  vvs_game.py
speelgrond/examples/1_sphere/content/: game.py  main.py  screen_shader.frag
speelgrond/examples/2_iq_rainforest/: __main__.py  screen_shader.frag  vvs_game.py
speelgrond/examples/2_iq_rainforest/content/: game.py  main.py
speelgrond/examples/3_character/: character.py  character_uniform_values.py  math_helpers.py  screen_shader.frag  transform.py  vvs_game.py
speelgrond/screen_shader/: screen_shader.py
