[tool.poetry]
name = "speelgrond"
version = "0.1.0"
description = ""
authors = ["Berry van Someren"]

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "^2.0.0"
numpy = "^1.23.5"
pygame = "^2.1.2"
ververser = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
